<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <com.apps.jhl.wifiremote.view.DualJoystickView
        android:id="@+id/dualjoystickView" android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dip" android:layout_width="match_parent"
        android:layout_height="175dip" />

    <TableLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dip">

        <TableRow>
            <TextView android:text="@string/pitch_str"
                android:layout_width="50dip"
                android:layout_height="wrap_content" />

            <TextView android:text=""
                android:id="@+id/pitchTextView"
                android:layout_width="150dip"
                android:layout_height="wrap_content"/>

            <TextView android:text="@string/throttle_str"
                android:layout_width="50dip"
                android:layout_height="wrap_content"/>

            <TextView android:text=""
                android:id="@+id/throttleTextView"
                android:layout_width="100dip"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/roll_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView android:text=""
                android:id="@+id/rollTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView android:text="@string/yaw_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView android:text=""
                android:id="@+id/yawTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/status_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView android:text=""
                android:id="@+id/statusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView android:text="@string/signal_strength_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView android:text=""
                android:id="@+id/signalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ToggleButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="str"
            android:id="@+id/armTglBtn"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ACC_CAL"
            android:id="@+id/calibrateAccBtn"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Settings"
            android:id="@+id/settingsBtn"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>